# PyTorch-QuadConv

./: .gitignore  AutoConvPoint_refactor.py  CITATION  CITATION.cff  Checkpoint.ipynb  GIF.ipynb  LICENSE  MANIFEST.in  OverlapTiles.ipynb  Profiling.ipynb  QuadConvOp.ipynb  README.md  Raw GIFs.ipynb  analysis.ipynb  cnn_layer_profile.py  environment.yaml  environment.yml  full_train_quadcov.py  main.py  pyproject.toml  qc_layer_profile.py  qc_profile.py  quadrature_analysis.ipynb  random.ipynb  raw_gifs.py  raw_gifs_1D_DM.py  setup.py  test_quadconv.py  train_quadconv.py
FastGL/: fastgl_test.py  fastgl_test.txt  glpairs.py  glpairtabulated.py  legendre_theta.py
c_test/: test.c  test.py
core/: autoencoder.py  conv.py  conv_blocks.py  data.py  grid_data.py  maxskip.py  mesh_data.py  model.py  modelnet_data.py  models.py  original_model.py  point_blocks.py  pointcloud_data.py  quadconv.py  quadconv2.py  quadconv_blocks.py  structured_data.py  unstructured_data.py  utilities.py  utils.py  voxelizer.py
data/: .gitignore  build-1D-AD-data.py  build-1D-data.py  make_unstructured.py
experiments/: basic1D_maxskip_qcnn.yml  blanca_ignition.yml  blanca_ignition_cnn.yml  blanca_ignition_cnn_full.yml  blanca_ignition_cnn_tiled.yml  blanca_ignition_qcnn.yml  blanca_ignition_qcnn_full.yml  blanca_ignition_qcnn_tiled.yml  blanca_ignition_test.yml  deepspeed_config.json  example.yml  ignition.yml  ignition_center_cut.yml  ignition_cnn.yml  ignition_cnn_center.yaml  ignition_cnn_center.yml  ignition_cnn_full.yaml  ignition_cnn_full.yml  ignition_cnn_tiled.yaml  ignition_qcnn.yml  (+21 more)
(+247 files in other folders)
